tests/resource/valid/function/return_last_expression.mamba
def my_fun() -> String =>
    print("a statement")
    "a"

print(my_fun())
