tests/resource/invalid/type/error/with_not_expression.mamba
def not_an_expression() => print("not an expression")

with not_an_expression() as my_expression do
    print("not an expression!")